Fix dark mode for aero, digitcode, minirogue, nature, seasons, sherlockthirteen, thirteenclues, twintinbots

--- a/src/css/games/aero.less
+++ b/src/css/games/aero.less
@@ -12,4 +12,12 @@ html[data-theme=dark] {
 	.aero-box .aero-dices .aero-dices-lock {
 		border-color: var(--blue-70);
 	}
+
+	.aero-box .aero-tiles>span {
+		text-shadow: 1px 0 1px #000, 0 -1px 1px #000, 0 1px 1px #000, -1px 0 1px #000;
+	}
+
+	#aero-header {
+		border: 1px solid var(--dark-40);
+	}
 }
