--- a/src/css/games/minirogue.less
+++ b/src/css/games/minirogue.less
@@ -39,6 +39,11 @@ html[data-theme=dark] {
 		.mnr-merchant {
 			background: transparent;
 		}
+
+		.mnr-i[data-type="L"] {
+			color: #fff;
+			background: transparent;
+		}
 	}
 
 	.mnr-potion1 {
@@ -51,7 +56,7 @@ html[data-theme=dark] {
 
 	.mnr-poison,
 	.mnr-potion3 {
-		color: #5dbc55
+		color: #5dbc55 !important;
 	}
 
 	.mnr-hp,
