--- a/src/css/games/nature.less
+++ b/src/css/games/nature.less
@@ -58,4 +58,8 @@ html[data-theme=dark] {
 		background-color: var(--dark-back);
 		fill: var(--light-80);
 	}
+
+	.na_header .ca_round {
+		color: #c19971;
+	}
 }
